syntax = "proto3";

package demo;

import "airwallex/protobuf/message_mapping.proto";
import "airwallex/type/uuid.proto";

service UserService {
  rpc Create(CreateUserRequest) returns (airwallex.type.UUID) {}
  rpc Get(airwallex.type.UUID) returns (User) {}
  rpc Search(SearchUserRequest) returns (SearchUserResponse) {}
}

message CreateUserRequest {
  string name = 1;
  UserType type = 2;
  optional string email = 3;

  option (airwallex.protobuf.java_mapping) = {
    target_type: "demo.CreateUserRequest"
  };
}

message User {
  string id = 1;
  string name = 2;
  UserType type = 3;
  optional string email = 4;

  option (airwallex.protobuf.java_mapping) = {
    target_type: "demo.User"
  };
}

message SearchUserRequest {
  string name = 1;

  option (airwallex.protobuf.java_mapping) = {
    target_type: "demo.SearchUserRequest"
  };
}

message SearchUserResponse {
  repeated User users = 1;

  option (airwallex.protobuf.java_mapping) = {
    target_type: "demo.SearchUserResponse"
  };
}

enum UserType {
  USER_TYPE_UNSPECIFIED = 0;
  USER_TYPE_INTERNAL = 1;
  USER_TYPE_EXTERNAL = 2;
}
